# linked-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LEARNINGS.md  README.md  pyproject.toml
agent/: baseline.py  train_grpo.py
data/: bad_posts.yaml  good_posts.yaml  safety_banned.example.yaml  topics.yaml
notes/: cliched_closers.md  reward-hack-risks.md
reward/: __init__.py  score.py  weights.yaml
reward/features/: _text_utils.py  hook.py  safety.py  structure.py  style.py
scripts/: collect_human_labels.py  generate_baseline.py  validate_reward.py
tests/: test_hook.py  test_reward.py  test_safety.py  test_structure.py  test_style.py
